After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687937 - nautilus cannot handle symlink when connected to an sftp server
nautilus cannot handle symlink when connected to an sftp server
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Navigation
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 688096 688997 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-11-08 19:56 UTC by Quentin Geissmann
Modified: 2012-11-24 20:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Quentin Geissmann 2012-11-08 19:56:37 UTC
When browsing an sftp server, a double click on a symlink (folder of file) does nothing visible. This is quite annoying in some servers because it makes it virtually impossible to browse some directories, but there is a workaround.

The expected behaviour (and the behaviour of nautilus for local file) is to open the location or file the symlink point to.

To reproduce:
1) Use a command like "nautilus sftp://USERNAME@localhost"
2) Double click or press enter on a symlink
3) Nothing happens

Workaround:
Press CTRL+L (to enter location) and write complete the path with the name of the symliked directory
Comment 1 Cosimo Cecchi 2012-11-12 15:17:58 UTC
*** Bug 688096 has been marked as a duplicate of this bug. ***
Comment 2 Cosimo Cecchi 2012-11-12 16:17:28 UTC
Thanks for the report, I pushed a fix to master now.
Comment 3 Quentin Geissmann 2012-11-12 16:54:42 UTC
No problem,
Thank you for the fix.
Comment 4 Cosimo Cecchi 2012-11-24 20:47:37 UTC
*** Bug 688997 has been marked as a duplicate of this bug. ***