mime-actions: don't invalidate symlink info twice

We already trigger a nautilus_file_call_when_ready() on the symlink
file, which will include link information.
Invalidating symlink info manually here will make us read invalid
information in the ready callback instead.

https://bugzilla.gnome.org/show_bug.cgi?id=687937